--- a/backend-mongodb/.env
+++ b/backend-mongodb/.env
@@ -1,8 +1,8 @@
 # Database Configuration
-MONGODB_URI=mongodb://localhost:27017/dao-management
+MONGODB_URI="mongodb+srv://ahmedbensariane:Zolazed1233@cluster123.4x8oi3k.mongodb.net/?retryWrites=true&w=majority&appName=Cluster123"
 
 # JWT Configuration
-JWT_SECRET="dja8S9d8asj2klas98dj2lkjas9dkj23lkasjdlkajsdlkj"
+#JWT_SECRET="dja8S9d8asj2klas98dj2lkjas9dkj23lkasjdlkajsdlkj"
 JWT_EXPIRES_IN=24h
 
 # Server Configuration
