--- a/backend-mongodb/.env.example
+++ b/backend-mongodb/.env.example
@@ -1,5 +1,5 @@
 # Database Configuration
-MONGODB_URI=MONGODB_URI=mongodb+srv://sofianekhebal378:it7x1p8uiLifikR8@cluster0.cec9bsw.mongodb.net/dao-management?retryWrites=true&w=majority
+MONGODB_URI=MONGODB_URI="mongodb+srv://ahmedbensariane:Zolazed1233@cluster123.4x8oi3k.mongodb.net/?retryWrites=true&w=majority&appName=Cluster123"
 
 
 # JWT Configuration
